SFDC Automation/src/objects/RSM_Contract__c.object
<CustomObject>
    <description>Object to store RydeSmart Contract details</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to store the ID of the Account with which the Contract is related. This field will be populated from database based on the Lessee No in the contract</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RSM Contracts</relationshipLabel>
        <relationshipName>RSM_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_Contract_details__c</fullName>
        <label>Cancelled Contract details</label>
        <summaryFilterItems>
            <field>RSM_ContractDetail__c.Action_Name__c</field>
            <operation>equals</operation>
            <value>Cancel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>RSM_ContractDetail__c.Is_Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>RSM_ContractDetail__c.Contract_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <externalId>true</externalId>
        <label>Contract Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <description>To store the Created by of the Contract in the Telemetry</description>
        <label>CreatedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>To store the Created Date of the Contract in the Telemetry</description>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentTypeID__c</fullName>
        <label>DocumentTypeID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Type_Name__c</fullName>
        <label>Document Type Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lessee_Email__c</fullName>
        <label>Lessee Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lessee__c</fullName>
        <label>Lessee</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Name__c</fullName>
        <label>Status Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Detail__c</fullName>
        <label>Total Contract Detail</label>
        <summaryFilterItems>
            <field>RSM_ContractDetail__c.Is_Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>RSM_ContractDetail__c.Contract_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>RSM Contract</label>
    <nameField>
        <label>RSM Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RSM_Contract_Number_Readonly_Managers</fullName>
        <active>true</active>
        <description>Making Read Only for RydeSMart Managers on the Field RSM Contract Number</description>
        <errorConditionFormula>AND(ISCHANGED( Name ),$Profile.Name = &quot;RydeSmart Manager&quot;)</errorConditionFormula>
        <errorDisplayField>Contract_Number__c</errorDisplayField>
        <errorMessage>You Do not have permission to edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RSM_Contract_Number_Readonly_Users</fullName>
        <active>true</active>
        <description>Making Read Only for RydeSMart Users on the Field RSM Contract Number</description>
        <errorConditionFormula>AND(ISCHANGED( Name ),$Profile.Name = &quot;RydeSmart User&quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You Do not have permission to edit this field</errorMessage>
    </validationRules>
</CustomObject>